добавлены тесты для метода getCombinations();